--- a/config.env
+++ b/config.env
@@ -4,3 +4,6 @@ NODE_ENV = PRODUCTION
 
 DATABASE = mongodb+srv://preet:<PASSWORD>@cluster0.t0vmqbl.mongodb.net/parkingSystem
 DATABASE_PASSWORD = k2NW24Fqaz3hVxw2
+
+KEY_ID = rzp_test_Oi69HJagINaREZ
+KEY_SECRET = V8bz7OLp4lriREQl4xDPsSEa
