--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.0.0",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.20",
     "razorpay": "^2.8.6"
   }
