Updated Gate Opem functionality

--- a/config.env
+++ b/config.env
@@ -7,3 +7,5 @@ DATABASE_PASSWORD = k2NW24Fqaz3hVxw2
 
 KEY_ID = rzp_test_Oi69HJagINaREZ
 KEY_SECRET = V8bz7OLp4lriREQl4xDPsSEa
+
+X_AIO_KEY = aio_YBZM427FGt8Mz3yBVb0HZfdb6nC4
